(hopefully) fixed header not showing on landing page of published site

--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ h1#title-1 {
 
 #title-1 em::before,
 #title-1 em::after {
-  content: "§";
+  /*content: "§";*/
   display: inline-block;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
